--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "skills-matrix",
+  "name": "skills-matrix-client-vue",
   "version": "1.0.0",
-  "description": "Skills matrix web application client implemented with Vuex",
-  "author": "Carles Capellas",
-  "private": true,
+  "description": "Skills matrix web application client implemented with Vue and bundled via Webpack",
+  "main": "index.js",
+  "author": "Carles Capellas <capellas.carles@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
@@ -26,7 +28,6 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
